# still not quite sure how to handle this stuff
install(FILES comedian-architecture-c++.cast comedian-architecture.cast comedian-architecture-java.cast direct-test-java.cast direct-test-c++.cast single-python-component.cast direct-test-python.cast cast_ice_config log4j.properties DESTINATION share/cast/config)
